--- a/src/practice/CMakeLists.txt
+++ b/src/practice/CMakeLists.txt
@@ -1,3 +1,8 @@
+set(CMAKE_BUILD_TYPE DEBUG)
+
+add_executable(main src/main.cpp)
+target_link_libraries(main)
+
 IF(IS_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/src/geeksforgeeks")
         ADD_SUBDIRECTORY(src/geeksforgeeks)
 ENDIF()
