--- a/src/practice/src/geeksforgeeks/CMakeLists.txt
+++ b/src/practice/src/geeksforgeeks/CMakeLists.txt
@@ -1,3 +1,9 @@
 ADD_EXECUTABLE(array_practice  src/array/main.cpp )
 TARGET_LINK_LIBRARIES(array_practice)
 
+
+ADD_EXECUTABLE(stack_practice  src/stack/main.cpp )
+TARGET_LINK_LIBRARIES(stack_practice)
+
+ADD_EXECUTABLE(hash_practice  src/hash/main.cpp )
+TARGET_LINK_LIBRARIES(hash_practice)
