--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -123,6 +123,9 @@ target_link_libraries(backtracking)
 add_executable(branch_and_bound src/algorithms/Branch_and_bound/branch_and_bound.cpp)
 target_link_libraries(branch_and_bound)
 
+add_executable(dijkstra src/algorithms/Branch_and_bound/dijkstra.cpp)
+target_link_libraries(dijkstra)
+
 add_executable(strassen_matrix_multiplication src/algorithms/Divide_and_conquer/strassen_matrix_multiplication.cpp)
 target_link_libraries(strassen_matrix_multiplication)
 
