--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,28 +1,9 @@
 cmake_minimum_required(VERSION 3.10 FATAL_ERROR)
-set(CMAKE_BUILD_TYPE DEBUG)
-
 project(data_structure_algorithm)
 
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set(CMAKE_CXX_EXTENSIONS OFF)
-
-
-
-
-if(MSVC)
-  # Force to always compile with W4
-  if(CMAKE_CXX_FLAGS MATCHES "/W[0-4]")
-    string(REGEX REPLACE "/W[0-4]" "/W4" CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS}")
-  else()
-    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /W4")
-  endif()
-elseif(CMAKE_COMPILER_IS_GNUCC OR CMAKE_COMPILER_IS_GNUCXX)
-  # Update if necessary
-  set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wno-unused-variable")
-  set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wno-unused-private-field")
-endif()
-
 
 
 set_property(GLOBAL PROPERTY USE_FOLDERS ON)
@@ -131,6 +112,4 @@ target_link_libraries(strassen_matrix_multiplication)
 
 ################################ Practice ################################
 
-IF(IS_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/src/practice")
-        ADD_SUBDIRECTORY(src/practice)
-ENDIF()
+add_subdirectory(src/practice)
