--- a/src/practice/CMakeLists.txt
+++ b/src/practice/CMakeLists.txt
@@ -1,16 +1,7 @@
-set(CMAKE_BUILD_TYPE DEBUG)
-
 add_executable(main src/main.cpp)
-target_link_libraries(main)
+add_subdirectory(src/geeksforgeeks)
+add_subdirectory(src/hackerrank)
+#add_subdirectory(src/interviews)
+add_subdirectory(src/leetcode)
+        
 
-IF(IS_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/src/geeksforgeeks")
-        ADD_SUBDIRECTORY(src/geeksforgeeks)
-ENDIF()
-
-IF(IS_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/src/hackerrank")
-        ADD_SUBDIRECTORY(src/hackerrank)
-ENDIF()
-
-#IF(IS_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/src/interviews")
-#        ADD_SUBDIRECTORY(src/interviews)
-#ENDIF()
