--- a/src/practice/src/leetcode/CMakeLists.txt
+++ b/src/practice/src/leetcode/CMakeLists.txt
@@ -36,3 +36,7 @@ add_executable(leetcode_queue src/queue.cpp)
 
 add_executable(leetcode_matrices src/matrices.cpp)
 
+add_executable(leetcode_array_string src/array_string.cpp)
+
+
+
