--- a/src/practice/src/leetcode/CMakeLists.txt
+++ b/src/practice/src/leetcode/CMakeLists.txt
@@ -38,5 +38,6 @@ add_executable(leetcode_matrices src/matrices.cpp)
 
 add_executable(leetcode_array_string src/array_string.cpp)
 
+add_executable(leetcode_sliding_window src/sliding_window.cpp)
 
 
